адаптив блока hero

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             Звоните: Ежедневно 08:00–20:00
           </p>
           <a href="tel:+79256166166" class="call__link">+7 (925) 6-166-166</a>
-          <button class="text-link mobile">Заказать обратный звонок</button>
+          <button class="text-link callback-popup mobile">Заказать обратный звонок</button>
         </div>
         <button class="header__btn callback-popup desktop">Заказать обратный звонок</button>
       </div>
@@ -160,24 +160,24 @@
         </h1>
         <div class="hero__descr">
           <h2 class="hero__subtitle section-title no-anim">
-            полный спектр услуг в области отопления и водоснабжения <span>с экономией до 30%</span>
+            полный спектр услуг в области отопления и водоснабжения <span>с&nbsp;экономией до 30%</span>
           </h2>
           <a href="#" class="hero__btn main-btn main-btn--white">
             <span class="btn-blick"></span>
-            <span>подобрать оборудование и рассчитать стоимость</span>
+            <span>подобрать оборудование и&nbsp;рассчитать стоимость</span>
           </a>
         </div>
         <ul class="hero__benefits">
           <li class="hero__benefits-item">
-            <b>12 месяцев</b>
+            <b>12 месяцев</b><br class="mobile">
             бесплатное обслуживание
           </li>
           <li class="hero__benefits-item">
-            <b>3 года</b> гарантия
+            <b>3 года</b> гарантия <br class="mobile">
             на&nbsp;монтаж от нашей компании
           </li>
           <li class="hero__benefits-item">
-            <b>Фиксируем стоимость</b> в договоре
+            <b>Фиксируем стоимость</b> в&nbsp;договоре
           </li>
           <li class="hero__benefits-item">
             <b>Бесплатный</b> выезд инженера на&nbsp;объект
