--- a/thanks.html
+++ b/thanks.html
@@ -18,7 +18,7 @@
 
 <body>
 
-	<header class="header header--fixed">
+	<header class="header header--active ">
 		<div class="container">
 			<div class="header__row flex">
 				<div class="header__logo flex">
@@ -184,7 +184,7 @@
 		</div>
 	</section>
 
-	<footer class="footer">
+	<footer class="footer footer--white">
 		<div class="container">
 			<div class="footer__row flex">
 				<div class="footer__logo flex">
