--- a/lidmagnit.html
+++ b/lidmagnit.html
@@ -228,7 +228,7 @@
 		</div>
 	</section>
 
-	<footer class="footer">
+	<footer class="footer footer--fixed">
 		<div class="container">
 			<div class="footer__row flex">
 				<div class="footer__logo flex">
